--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,7 @@ html, body, #home {
 
 
 body {
-	background: url(../imagens/fundocomtras3.png) no-repeat center center;
+	background: url(../fundocomtras3.png) no-repeat center center;
 	background-attachment: fixed;
 	font-family: Helvetica,Arial,sans-serif;
 
@@ -169,7 +169,7 @@ nav.navbar-transparente {
 footer {
 	padding: 20px 0px 30px 0px;
 	text-align: center;
-	background: url(../imagens/fundo-rodape.png) no-repeat center top;
+	background: url(../fundo-rodape.png) no-repeat center top;
 	margin-top: 30px;
 	
 	
