--- a/estilo.css
+++ b/estilo.css
@@ -193,10 +193,7 @@ h2 {
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) { 
-	.btn-rosa {
-		font-size: 0.8em;
-	}
-	.btn-whats {
+	.btn-rosa, .btn-whats {
 		font-size: 0.8em;
 	}
 	.rsocial {
@@ -213,10 +210,7 @@ h2 {
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) { 
-	h1 {
-		font-size: 3em;
-	}
-	h2 {
+	h1, h2 {
 		font-size: 3em;
 	}
 	.btn-rosa {
@@ -238,10 +232,7 @@ h2 {
 
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) { 
-	h1 {
-		font-size: 4em;
-	}
-	h2 {
+	h1, h2 {
 		font-size: 4em;
 	}
 	.btn-rosa {
@@ -264,12 +255,10 @@ h2 {
 
 /* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) and (max-width: 1199.98px) { 
-	h1 {
+	h1, h2 {
 		font-size: 5em;
 	}
-	h2 {
-		font-size: 5em;
-	}
+	
 	.btn-rosa {
 		font-size: 1.3em;
 	}
@@ -290,10 +279,7 @@ h2 {
 
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { 
-	h1 {
-		font-size: 6em;
-	}
-	h2 {
+	h1, h2 {
 		font-size: 6em;
 	}
 	.btn-rosa {
