--- a/estilo.css
+++ b/estilo.css
@@ -181,7 +181,7 @@ h2 {
 	width: 260px;
 	height: 180px;
 	}
-	section h2 {
+	h2 {
 		margin-top: -150px;
 	}
  }
@@ -193,6 +193,7 @@ h2 {
 	}
 	h2 {
 		font-size: 3em;
+		margin-top: -100px;
 	}
 	.btn-rosa {
 		font-size: 1em;
@@ -206,9 +207,7 @@ h2 {
 	width: 360px;
 	height: 200px;
 	}
-	section h2 {
-		margin-top: -100px;
-	}
+	
 
  }
 
@@ -219,6 +218,7 @@ h2 {
 	}
 	h2 {
 		font-size: 4em;
+		margin-top: -50px;
 	}
 	.btn-rosa {
 		font-size: 1.2em;
@@ -232,9 +232,7 @@ h2 {
 	width: 450px;
 	height: 230px;
 	}
-	section h2 {
-		margin-top: -50px;
-	}
+	
  }
 
 /* Large devices (desktops, 992px and up)*/
@@ -244,6 +242,7 @@ h2 {
 	}
 	h2 {
 		font-size: 5em;
+		margin-top: -20px;
 	}
 	.btn-rosa {
 		font-size: 1.3em;
@@ -256,14 +255,10 @@ h2 {
 	.maps {
 	width: 550px;
 	height: 250px;
-}
-	section h2 {
-		margin-top: -20px;
 	}
-
-
  }
 
+	
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { 
 	h1 {
