--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,7 @@ html, body, #home {
 
 
 body {
-	background: url(../fundocomtras3.png) no-repeat center center;
+	background: url(../fundoskycomame.webp) no-repeat center center;
 	background-attachment: fixed;
 	font-family: Helvetica,Arial,sans-serif;
 
