--- a/estilo.css
+++ b/estilo.css
@@ -181,17 +181,14 @@ h2 {
 	width: 260px;
 	height: 180px;
 	}
-	h2 {
+	h1, h2 {
 		margin-top: -250px;
 	}
  }
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) { 
-	h1 {
-		font-size: 3em;
-	}
-	h2 {
+	h1, h2 {
 		font-size: 3em;
 		margin-top: -200px;
 	}
@@ -213,10 +210,7 @@ h2 {
 
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) { 
-	h1 {
-		font-size: 4em;
-	}
-	h2 {
+	h1, h2 {
 		font-size: 3.5em;
 		margin-top: -150px;
 	}
@@ -226,7 +220,7 @@ h2 {
 	.insta {
 	width: 80px;
 	position: center;
-	padding-top: 5px;
+	padding-top: -80px;
 	}
 	.maps {
 	width: 450px;
