--- a/estilo.css
+++ b/estilo.css
@@ -1,277 +1,12 @@
-/* Layout
-----------------------------------------*/
+@charset "UTF-8";
 
-html, body, #home {
-	height: 100%;
-}
-
-
-
-body {
-	background: url(../fundoskycomame.webp) no-repeat center center;
-	background-attachment: fixed;
-	font-family: Helvetica,Arial,sans-serif;
-
-
-
-}
-
-/* Barra de navegação
-----------------------------------------*/
-
-nav.navbar-transparente {
-	padding: 15px 0px;
-	background: rgba(253,164,170,0.6);
-}
-
-.navbar-expand-md .navbar-nav .nav-link {
-	color: white;
-	font-size: 1rem;
-	font-weight: 600;
-
-}
-.navbar-expand-md .navbar-nav .nav-link:hover {
-	color: #8c017e;
-
-}
-
-.navbar-light .navbar-toggler {
-	padding-top: 5px;
-    color: rgba(255,255,255,.5);
-    border-color: rgba(255,255,255,.5);
- }
-
- .divisor {
- 	width: 1px;
- 	background: white;
- 	margin: 12px 15px;
- }
-
-
- /* Capa
-----------------------------------------*/
-.capa {
-	text-align: center;
-}
-
-.btn-custom {
-	color: white;
-	border-radius: 500px;
-	-webkit-border-radius: 500px;
-	-moz-border-radius: 500px;
-	text-transform: uppercase;
-	transition: background 0.4s, color 0.4s
-	padding:  10px 15px;
-	
-}
-
-.d-flex {
-	margin: 10px;
-}
-
-.btn-custom2 {
-	color: #fe5fa2;
-	border-radius: 500px;
-	-webkit-border-radius: 500px;
-	-moz-border-radius: 500px;
-	text-transform: uppercase;
-	transition: background 0.4s, color 0.4s
-	padding:  10px 20px;
-}
-
-.btn-rosa {
-	border: 2px solid #fe5fa2;
-	background: #fe5fa2;
-	font-weight: 500;
-}
-
-.btn-branco {
-	background: rgba(253,164,170,0.3);
-	border: 2px solid #fe5fa2;
-	
-}
-
-.btn-rosa:hover {
-	
-	background: #FFFFFF;
-	color: #fe5fa2;
-	font-weight: 550;
-
-}
-.btn-branco:hover {
-	background: #e89bbb;
-	color: #8c017e;
-
-}
-
-/* Estrutura conteúdos
------------------------------------------*/
-#servicos {
-	background: white;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.titulo {
-	text-align: center;
-	background: #adcce4;
-	border-radius: 500px;
-	-webkit-border-radius: 500px;
-	-moz-border-radius: 500px;
-	transition: background 0.4s, color 0.4s
-	padding:  10px 20px;
-
-
-
-}
-
-.agenda {
-	padding: 10px 0;
-
-}
-
-.marg {
-	padding-bottom: 5px;
-}
-
-.insta {
-	width: 120px;
-	position: center;
-	padding-top: 5px;
-}
-
-
-/* Rodapé
-----------------------------------------*/
-footer {
-
-	background: url(../fundo-rodape.png) no-repeat center top;
-	padding: 20px 0px 30px 0px;
-	text-align: center;
-	
-}
-
-
-/* Tipografia
-----------------------------------------*/
-h1 {
-	font-weight: 800;
-	letter-spacing: -0.05em;
-	margin-bottom: 50px;
-	color: #fe5fa2;
-}
-h2 {
-	font-weight: 700;
-	letter-spacing: -0.05em;
-	margin-bottom: 50px;
-	color: #fe5fa2;
-}
-
-/* Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 575.98px) { 
-	.btn-rosa {
-		font-size: 0.8em;
+	body {
+		margin-top: 0px;
+		padding: 0;
+		height: 90vh;
+		width: 100%vw;
 	}
-	.insta {
-	width: 40px;
-	position: center;
-	padding-top: 5px;
-	}
-	.maps {
-	width: 260px;
-	height: 180px;
-	}
-	h1, h2 {
-		margin-top: -250px;
-	}
- }
 
-/* Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) and (max-width: 767.98px) { 
-	h1, h2 {
-		font-size: 3em;
-		margin-top: -200px;
+	iframe {
+		width: 500px;
 	}
-	.btn-rosa {
-		font-size: 1em;
-	}
-	.insta {
-	width: 60px;
-	position: center;
-	padding-top: 5px;
-	}
-	.maps {
-	width: 360px;
-	height: 200px;
-	}
-	
-
- }
-
-/* Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) and (max-width: 991.98px) { 
-	h1, h2 {
-		font-size: 3.5em;
-		margin-top: -150px;
-	}
-	.btn-rosa {
-		font-size: 1.2em;
-	}
-	.insta {
-	width: 80px;
-	position: center;
-	padding-top: -80px;
-	}
-	.maps {
-	width: 450px;
-	height: 230px;
-	}
-	
- }
-
-/* Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) and (max-width: 1199.98px) { 
-	h1 {
-		font-size: 5em;
-	}
-	h2 {
-		font-size: 4.0em;
-		margin-top: -100px;
-	}
-	.btn-rosa {
-		font-size: 1.3em;
-	}
-	.insta {
-	width: 100px;
-	position: center;
-	padding-top: 5px;
-	}
-	.maps {
-	width: 550px;
-	height: 250px;
-	}
- }
-
-	
-/* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) { 
-	h1 {
-		font-size: 6em;
-	}
-	h2 {
-		font-size: 5em;
-	}
-	.btn-rosa {
-		font-size: 1.5em;
-	}
-	.insta {
-	width: 120px;
-	position: center;
-	padding-top: 5px;
-	}
-	.maps {
-	width: 600px;
-	height: 250px;
-}
-
- }
