--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 	body {
 		margin-top: 0px;
 		padding: 0;
@@ -7,6 +8,53 @@
 		width: 100%vw;
 	}
 
+
 	iframe {
 		width: 500px;
 	}
+
+/* Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) { 
+	h1, h2 {
+		font-size: 1.8em;
+	}
+	iframe {
+		width: 400px;
+	}
+ }
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
+	h1, h2 {
+		font-size: 2em;
+	}	
+ }
+
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991.98px) { 
+	h1, h2 {
+		font-size: 3em;
+	}	
+ }
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+	h1 {
+		font-size: 4em;
+	}
+	h2 {
+		font-size: 4.0em;
+	}
+ }
+
+	
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { 
+	h1 {
+		font-size: 4em;
+	}
+	h2 {
+		font-size: 4em;
+	}
+
+ }
