--- a/estilo.css
+++ b/estilo.css
@@ -10,40 +10,54 @@
 
 
 	iframe {
-		width: 500px;
+		min-width: 350px;
+		max-width: 700px;
+	}
+
+	.logo {
+		width: 130px;
 	}
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) { 
-	h1, h2 {
+	h1 {
 		font-size: 1.8em;
 	}
 	iframe {
-		width: 400px;
+		width: 100%;
 	}
  }
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) { 
-	h1, h2 {
+	h1 {
 		font-size: 2em;
 	}	
+	iframe {
+		width: 100%;
+	}
+
  }
 
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) { 
-	h1, h2 {
+	h1 {
 		font-size: 3em;
 	}	
+	iframe {
+		width: 100%;
+	}
+
  }
 
 /* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) and (max-width: 1199.98px) { 
 	h1 {
-		font-size: 4em;
+		font-size: 3.5em;
 	}
-	h2 {
-		font-size: 4.0em;
+
+	iframe {
+		width: 100%;
 	}
  }
 
@@ -51,10 +65,9 @@
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { 
 	h1 {
-		font-size: 4em;
+		font-size: 3.5em;
 	}
-	h2 {
-		font-size: 4em;
+	iframe {
+		width: 100%;
 	}
-
  }
