--- a/estilo.css
+++ b/estilo.css
@@ -15,8 +15,7 @@
 	}
 
 	.logo {
-		min-width: 130px;
-		max-width: 200px;
+		width: 130px;
 	}
 
 /* Extra small devices (portrait phones, less than 576px)*/
@@ -43,7 +42,7 @@
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) { 
 	h1 {
-		font-size: 3em;
+		font-size: 2.5em;
 	}	
 	iframe {
 		width: 100%;
@@ -54,7 +53,7 @@
 /* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) and (max-width: 1199.98px) { 
 	h1 {
-		font-size: 3.5em;
+		font-size: 3em;
 	}
 
 	iframe {
